--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
             android:ems="10"
             android:inputType="phone"
             android:textColor="@color/colorAccent"
+            android:layout_marginBottom="15dp"
             android:text="@string/phone_number" />
 
         <EditText
@@ -33,21 +34,23 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword"
-
             android:textColor="@color/colorAccent"
+            android:layout_marginBottom="15dp"
             android:text="@string/password" />
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
+            android:background="@drawable/sp_backround_button"
+            android:layout_marginBottom="80dp"
             android:text="@string/login_button" />
 
         <TextView
             android:id="@+id/textViewCreateAccount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
             android:text="@string/create_account" />
     </LinearLayout>
 
