--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="260dp"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/logo"
+            android:layout_marginBottom="25dp"/>
 
         <EditText
             android:id="@+id/editTextPhoneNumber"
@@ -26,7 +27,7 @@
             android:inputType="phone"
             android:textColor="@color/colorAccent"
             android:layout_marginBottom="15dp"
-            android:text="@string/phone_number" />
+            android:hint="@string/phone_number" />
 
         <EditText
             android:id="@+id/editTextPassword"
@@ -36,14 +37,15 @@
             android:inputType="textPassword"
             android:textColor="@color/colorAccent"
             android:layout_marginBottom="15dp"
-            android:text="@string/password" />
+            android:hint="@string/password" />
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/sp_backround_button"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="25dp"
+            android:textColor="@android:color/white"
             android:text="@string/login_button" />
 
         <TextView
@@ -51,6 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorAccent"
+            android:textAlignment="center"
+            android:textSize="16sp"
             android:text="@string/create_account" />
     </LinearLayout>
 
